--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" type="image/png" href="favicon.ico?v=2">
+  <base href="/">
   <title>Shopee Việt Nam</title>
 </head>
 <body>
